# LSparser

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  test.py
.github/workflows/: publish.yml  test.yml
LSparser/: __init__.py  __version__.py  command.py  core.py  parser.py  strSimilarity.py
LSparser/command/: __init__.py  command.py  core.py  helper.py  parser.py
LSparser/event/: __init__.py  command_event.py  event.py  event_manager.py
LSparser/util/: __init__.py  asyncs.py  str.py
test/: test_async.py  test_cmd.py  test_core.py
