[project]
name = "LSparser"
dynamic = ["version"]
description = "一个指令解析器"
authors = [
    {name = "liggest",email = "liggest@sina.cn"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "LSparser/__version__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
]
